--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "the-official-hackathon-survey",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "./node_modules/.bin/gulp"
   },
   "repository": {
     "type": "git",
@@ -16,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/STUPIDSHITNOONEINHAWAIINEEDSHACKATHON/the-official-hackathon-survey/issues"
   },
-  "homepage": "https://github.com/STUPIDSHITNOONEINHAWAIINEEDSHACKATHON/the-official-hackathon-survey#readme"
+  "homepage": "https://github.com/STUPIDSHITNOONEINHAWAIINEEDSHACKATHON/the-official-hackathon-survey#readme",
+  "description": "",
+  "devDependencies": {
+    "browser-sync": "^2.18.6",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.0.0"
+  }
 }
